# pygame-template

./: Dockerfile  Makefile  README.md  auto-reload.py  build-and-run.sh  docker-compose.yml  inject-autoreload.py  pyproject.toml  start  start-pygbag.sh  start-server.sh  validate-syntax.py  watch-and-reload.sh
.devcontainer/: README.md  devcontainer.json
app/: main.py
learn/1_tasten/: functions.py  main.py
learn/2_bewegen/: functions.py  main.py
learn/2_bewegen/.help/: loesung.py
src/objekte/: zustand.py
