[project]
name = "pygame-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "ffmpeg-python>=0.2.0",
    "pygame>=2.6.1",
    "pygbag>=0.9.2",
    "ruff>=0.8.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
